[package]
name = "podbean"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "hickory-dns", "gzip", "brotli", "deflate", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.0", default-features = false, features = ["fs"] }
url = "2.5.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
