[package]
name = "podbean"
version = "0.2.1"
edition = "2024"
authors = ["Ernestas Poskus @ernestas-poskus"]
description = "An async Podbean client for connecting to the Podbean API."

homepage = "https://github.com/ernestas-poskus/podbean"
repository = "https://github.com/ernestas-poskus/podbean"
license = "MIT"
documentation = "https://docs.rs/podbean"
keywords = ["api", "client"]
categories = ["development-tools"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "hickory-dns", "gzip", "brotli", "deflate", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45", default-features = false, features = ["fs"] }
url = "2.5.4"

[dev-dependencies]
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
